# pyrol

./: CMakeLists.txt  LICENSE  README.md  pyrol.cpp  setup.py
pyrol/: __init__.py  robot_kinematics.py
src/: pyrol.cpp
